<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="app_name">Activity App</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_tab_nav">MainTabNavActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user_nav_drawer">UserNavDrawerActivity</string>
    <string name="title_activity_user_navigation">UserNavigationActivity</string>
    <string name="title_activity_user_account_nav">UserAccountNavActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Create an Account</string>
    <string name="title_activity_details">Event Details</string>
    <string name="title_activity_invite">Event Invite</string>
    <string name="title_activity_chat">Chatroom</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_acct">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_no_match">Passwords do not match</string>
    <string name="prompt_name">Full Name</string>
    <string name="error_invalid_name">Name can only contain letters and whitespaces</string>
    <string name="btn_change_loc">Change Location</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="btn_use_my_loc">Use My Location</string>
    <string name="btn_select_loc">Select A Location</string>
    <string name="txt_current_loc">Current Location: %1$s</string>
    <string name="txt_current_loc_err">Current Location: Error Getting User Location</string>
    <string name="txt_event_detail_owner">Created By: %1$s</string>
    <string name="txt_event_rating">Rating: %1$s</string>

    <string name="details_event_address">Where at?</string>
    <string name="details_event_time">When is it?</string>
    <string name="details_event_hosting">Who is hosting?</string>
    <string name="details_event_more">Venue Website</string>
    <string name="details_time_format">%d/%d/%d at %d:%d</string>
    <string name="details_directions_button">Get Directions</string>
    <string name="details_image_description">Photo of event image</string>

    <string name="request_invite_button">Invite</string>
    <string name="request_invite_text">Want to invite your friends?</string>
    <string name="request_invite_placehold">invited you to</string>
    <string name="request_who">Who would you like to invite?</string>
    <string name="request_which">Which Event?</string>
    <string name="request_name">Name</string>

    <string name="create_event_head">Name Your Event</string>
    <string name="create_event_name">Enter a name</string>
    <string name="create_event_private">Private Event</string>
    <string name="create_event_when">When is this Event?</string>
    <string name="create_event_where">Where is this Event?</string>
    <string name="create_event_time">Select a Time</string>
    <string name="create_event_date">Select a Date</string>

    <string name="chat_hint">Enter a message</string>
</resources>
