<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gvsu.cis.activityapp.activities.EventDetailActivity">

    <ImageView
        android:id="@+id/event_photo"
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/details_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/txtEventName"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_photo" />

    <TextView
        android:id="@+id/txtEventWebsite"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        app:layout_constraintEnd_toEndOf="@+id/txtEventCreator"
        app:layout_constraintStart_toStartOf="@+id/txtEventCreator"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/txtEventAddress"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/directions_button"
        app:layout_constraintStart_toStartOf="@+id/where_at_txt"
        app:layout_constraintTop_toBottomOf="@+id/where_at_txt" />

    <TextView
        android:id="@+id/txtEventCreator"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/txtTimeView"
        app:layout_constraintStart_toStartOf="@+id/txtTimeView"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/where_at_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_event_address"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEventName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_event_time"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEventAddress" />

    <TextView
        android:id="@+id/txtTimeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintEnd_toEndOf="@+id/txtEventAddress"
        app:layout_constraintStart_toStartOf="@+id/txtEventAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_event_hosting"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTimeView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_event_more"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEventCreator" />

    <Button
        android:id="@+id/directions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/details_directions_button"
        app:layout_constraintBottom_toBottomOf="@+id/txtEventAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEventAddress" />

</android.support.constraint.ConstraintLayout>
